--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <TABLE Border=1>
 <TR>
 <TD> <Font face=beachsociety color=black size=6 > Inicio </font></TD>
-<TD> <A href="abcd.html"><Font face=beachsociety color=black size=6 > Mente Sana</A> </font> </td>
-<TD> <A href="88.html"><Font face=beachsociety color=black size=6 > Cuerpo Sano/ Consejos </A></font> </td>
+<TD> <A href="mente.html"><Font face=beachsociety color=black size=6 > Mente Sana</A> </font> </td>
+<TD> <A href="cuerpo.html"><Font face=beachsociety color=black size=6 > Cuerpo Sano/ Consejos </A></font> </td>
 
 </TR>
 </table>
